--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1> ABOUT </h1>
+    <p>This is my about me page. It's where I talk all about myself and how great I am.... ya.</p>
 </body>
 </html>
