--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WilliamBerman</title>
+    <title>WilliamBermanProjects</title>
+    <link rel="stylesheet" href="style/index.css">
+    <!-- <link rel="about" href="about.html">
+    <link rel="contact" href="contact.html">
+    <link rel="projects" href="projects.html">
+    <link rel="home" href="index.html"> -->
 </head>
 <body>
-    
+    <header>
+        <div class="mainHeader">
+            <h1>William Berman</h1>
+            <nav>
+                <div class="navBar">
+                    <div class=navText>
+                        <a href="home.html">Home</a>
+                    </div>
+                    <div class=navText>
+                    <a href="about.html">About</a>
+                    </div>
+                    <div class=navText>
+                        <a href="contact.html">Contact</a>
+                    </div>
+                    <div class=navText>
+                        <a href="projects.html">Projects</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
