--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1> CONTACT </h1>
+    <p> Contact me 
+            <a mailto="wberman27@gmail.com" target="_blank">wberman27@gmail.com</a>
+    </p>
 </body>
 </html>
