--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WilliamBermanProjects</title>
     <link rel="stylesheet" href="style/index.css">
-    <!-- <link rel="about" href="about.html">
+    <link rel="about" href="about.html">
     <link rel="contact" href="contact.html">
     <link rel="projects" href="projects.html">
-    <link rel="home" href="index.html"> -->
+    <link rel="home" href="index.html">
 </head>
 <body>
     <header>
         <div class="mainHeader">
-            <h1>William Berman</h1>
+            <h1>Berman Blog</h1>
             <nav>
                 <div class="navBar">
                     <div class=navText>
@@ -32,7 +32,54 @@
             </nav>
         </div>
     </header>
-
+<section>
+    <div class="meBody">
+        <div class="me">
+            <img src="images/DSC_2055edit (2).jpg" alt="Me">
+        </div>
+        <div class="columnizeMe">
+        <h2> William Berman</h2>
+        <div class=navText>
+            <a href="projects.html">My Projects</a>
+        </div>
+        <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus!</p>
+        </div>
+    </div>
+</section>
+<section>
+<div class="gallery">
+    <div class="image">
+        <a href="projects.html">1</a>
+    </div>
+    <div class="image">
+        <a href="projects.html">2</a>
+    </div>
+    <div class="image">
+        <a href="projects.html">3</a>
+    </div>
+    <div class="image">
+        <a href="projects.html">4</a>
+    </div>
+    <div class="image">
+        <a href="projects.html">5</a>
+    </div>
+    <div class="image">
+        <a href="projects.html">6</a>
+    </div>
+    <div class="image">
+        <a href="projects.html">7</a>
+    </div>
+    <div class="image">
+        <a href="projects.html">8</a>
+    </div>
+</div>
+</section>
+<footer>
+    <h2>Like what you see?</h2>
+    <div class=navText>
+        <a href="contact.html">Contact Me</a>
+    </div>
+</footer>
 
 
 
