--- a/index.html
+++ b/index.html
@@ -42,42 +42,44 @@
         <div class=navText>
             <a href="projects.html">My Projects</a>
         </div>
-        <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus!</p>
+        <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.</p>
         </div>
     </div>
 </section>
 <section>
 <div class="gallery">
     <div class="image">
-        <a href="projects.html">1</a>
+        <a href="projects.html">Project title 1</a>
     </div>
     <div class="image">
-        <a href="projects.html">2</a>
+        <a href="projects.html">Project title 2</a>
     </div>
     <div class="image">
-        <a href="projects.html">3</a>
+        <a href="projects.html">Project title 3</a>
     </div>
     <div class="image">
-        <a href="projects.html">4</a>
+        <a href="projects.html">Project title 4</a>
     </div>
     <div class="image">
-        <a href="projects.html">5</a>
+        <a href="projects.html">Project title 5</a>
     </div>
     <div class="image">
-        <a href="projects.html">6</a>
+        <a href="projects.html">Project title 6</a>
     </div>
     <div class="image">
-        <a href="projects.html">7</a>
+        <a href="projects.html">Project title 7</a>
     </div>
     <div class="image">
-        <a href="projects.html">8</a>
+        <a href="projects.html">Project title 8</a>
     </div>
 </div>
 </section>
 <footer>
-    <h2>Like what you see?</h2>
-    <div class=navText>
-        <a href="contact.html">Contact Me</a>
+    <div class="checkmeout">
+        <h2>Like what you see?</h2>
+        <div class=navText>
+            <a href="contact.html">Contact Me</a>
+        </div>
     </div>
 </footer>
 
