lots of stuff update

--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">    
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WilliamBermanPortfolio</title>
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="about" href="about.html">
+    <link rel="contact" href="contact.html">
+    <link rel="projects" href="projects.html">
+    <link rel="home" href="index.html">
 </head>
 <body>
-    <h1> CONTACT </h1>
-    <p> Contact me 
-            <a mailto="wberman27@gmail.com" target="_blank">wberman27@gmail.com</a>
-    </p>
-</body>
-</html>
+    <header>
+        <div class="mainHeader">
+            <h1>Projects Portfolio</h1>
+            <nav>
+                <div class="navBar">
+                    <div class=navText>
+                        <a href="index.html">Home</a>
+                    </div>
+                    <div class=navText>
+                    <a href="about.html">About</a>
+                    </div>
+                    <div class=navText>
+                        <a href="contact.html">Contact</a>
+                    </div>
+                    <div class=navText>
+                        <a href="projects.html">Projects</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+<section>
+    <div class="meBody">
+        <div class="me">
+            <img src="images/1383370_687980527880120_670417858_n.jpg" alt="Me+Cat">
+        </div>
+        <div class="columnizeMe">
+        <h2> William Berman</h2>
+            <a href="#">LinkedIn</a>
+            <a href="#">Twitter</a>
+        <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.</p>
+        </div>
+    </div>
+</section>
