--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WilliamBermanProjects</title>
+    <title>WilliamBermanPortfolio</title>
     <link rel="stylesheet" href="style/index.css">
     <link rel="about" href="about.html">
     <link rel="contact" href="contact.html">
@@ -13,11 +13,11 @@
 <body>
     <header>
         <div class="mainHeader">
-            <h1>Berman Blog</h1>
+            <h1>Projects Portfolio</h1>
             <nav>
                 <div class="navBar">
                     <div class=navText>
-                        <a href="home.html">Home</a>
+                        <a href="index.html">Home</a>
                     </div>
                     <div class=navText>
                     <a href="about.html">About</a>
@@ -76,7 +76,7 @@
 </section>
 <footer>
     <div class="checkmeout">
-        <h2>Like what you see?</h2>
+        <h2>Neat, huh?</h2>
         <div class=navText>
             <a href="contact.html">Contact Me</a>
         </div>
