--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="mainHeader">
-            <h1>Projects Portfolio</h1>
+            <h1>William Berman's Project Portfolio</h1>
             <nav>
                 <div class="navBar">
                     <div class=navText>
@@ -39,10 +39,12 @@
         </div>
         <div class="columnizeMe">
         <h2> William Berman</h2>
+        <h4> Web Developer, B.A Linguistics</h4>
         <div class=navText>
             <a href="projects.html">My Projects</a>
         </div>
-        <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.</p>
+        <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.
+            <br><br><h3>Last Updated: Jan. 2021</h3></p>
         </div>
     </div>
 </section>
