--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="mainHeader">
-            <h1>Projects Portfolio</h1>
+            <h1>Projects</h1>
             <nav>
                 <div class="navBar">
                     <div class=navText>
