huge update for responsive design

--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WilliamBermanPortfolio</title>
     <link rel="stylesheet" href="style/index.css">
-    <link rel="about" href="about.html">
-    <link rel="contact" href="contact.html">
-    <link rel="projects" href="projects.html">
-    <link rel="home" href="index.html">
 </head>
 <body>
     <header>
@@ -38,13 +34,16 @@
             <img src="images/DSC_2055edit (2).jpg" alt="Me">
         </div>
         <div class="columnizeMe">
-        <h2> William Berman</h2>
-        <h4> Web Developer, B.A Linguistics</h4>
-        <div class=navText>
-            <a href="projects.html">My Projects</a>
-        </div>
-        <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.
-            <br><br><h3>Last Updated: Jan. 2021</h3></p>
+            <h2> William Berman</h2>
+            <h4> Web Developer, B.A Linguistics</h4>
+            <div class=navText>
+                <div class="projbutton">
+                    <a href="projects.html">My Projects</a>
+                </div>
+            </div>
+            <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.
+            </p>
+            <p>Last Updated: Jan. 2021</p>
         </div>
     </div>
 </section>
