--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
     <div class="checkmeout">
         <h2>Neat, huh?</h2>
         <div class=navText>
-            <a href="contact.html">Contact Me</a>
+            <a href="contact.html">Contact</a>
         </div>
     </div>
 </footer>
