added a project 1 page

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 <section>
 <div class="gallery">
     <div class="image">
-        <a href="projects.html">Project title 1</a>
+        <a href="projects/project_1.html">Project title 1</a>
     </div>
     <div class="image">
         <a href="projects.html">Project title 2</a>
