added accessibility and fixed project 1 page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 <section>
     <div class="meBody">
         <div class="me">
-            <img src="images/IMG_1388.JPG" alt="Me">
+            <img src="images/IMG_1388.JPG" alt="Photo of William drumming">
         </div>
         <div class="columnizeMe">
         <h2> William Berman</h2>
