--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 <section>
     <div class="meBody">
         <div class="me">
-            <img src="images/1383370_687980527880120_670417858_n.jpg" alt="Me+Cat">
+            <img src="images/1383370_687980527880120_670417858_n.jpg" alt="Photo of William and his Cat">
         </div>
         <div class="columnizeMe">
         <h2> William Berman</h2>
