--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <section>
     <div class="meBody">
         <div class="me">
-            <img src="images/DSC_2055edit (2).jpg" alt="Me">
+            <img src="images/DSC_2055edit (2).jpg" alt="Portrait of William">
         </div>
         <div class="columnizeMe">
             <h2> William Berman</h2>
@@ -50,28 +50,28 @@
 <section>
 <div class="gallery">
     <div class="image">
-        <a href="projects/project_1.html">Project title 1</a>
+        <a href="projects/project_1.html" alt="Photo of Project 1">Project title 1</a>
     </div>
     <div class="image">
-        <a href="projects.html">Project title 2</a>
+        <a href="projects.html" alt="Photo of Project 2">Project title 2</a>
     </div>
     <div class="image">
-        <a href="projects.html">Project title 3</a>
+        <a href="projects.html" alt="Photo of Project 3">Project title 3</a>
     </div>
     <div class="image">
-        <a href="projects.html">Project title 4</a>
+        <a href="projects.html" alt="Photo of Project 4">Project title 4</a>
     </div>
     <div class="image">
-        <a href="projects.html">Project title 5</a>
+        <a href="projects.html" alt="Photo of Project 5">Project title 5</a>
     </div>
     <div class="image">
-        <a href="projects.html">Project title 6</a>
+        <a href="projects.html" alt="Photo of Project 6">Project title 6</a>
     </div>
     <div class="image">
-        <a href="projects.html">Project title 7</a>
+        <a href="projects.html" alt="Photo of Project 7">Project title 7</a>
     </div>
     <div class="image">
-        <a href="projects.html">Project title 8</a>
+        <a href="projects.html" alt="Photo of Project 8">Project title 8</a>
     </div>
 </div>
 </section>
