--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
     <div class="meBody">
 
         <div class="columnizeMe">
-        <h2> Projects</h2><br>
+        <h2>My Projects, 2021</h2><br>
 
         <p>What I do for projects my thought process yadda yadda ribus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.</p>
         </div>
