--- a/projects/project_1.html
+++ b/projects/project_1.html
@@ -31,12 +31,15 @@
 <section>
 <div class="projBody">
     <div class="gallery">
-        <div class="image">
+        <div class="image" role='banner' aria-label='background image'>
         </div>
     </div>
     <div class="projBodyText">
     <h2>Project 1</h2>
     <p>What I do for projects my thought process yadda yadda ribus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse consectetur sint ullam velit nobis soluta dolorum corporis et, culpa consequatur libero quaerat minima facilis laudantium maiores atque doloribus nam odit assumenda earum eos impedit praesentium? Dolorem expedita minus, repudiandae voluptatum eaque ipsam maxime in, aliquid officia, repellat placeat. Excepturi.</p>
+    <div class="NP">
+        <a href="../projects.html">Back to Projects Page</a>
+    </div>
     </div>
 </div>
 </section>
