added link to linkedin in contacts page

--- a/projects/project_1.html
+++ b/projects/project_1.html
@@ -47,7 +47,7 @@
     <div class="checkmeout">
         <h2>Neat, huh?</h2>
         <div class=navText>
-            <a href="contact.html">Contact</a>
+            <a href="../contact.html">Contact</a>
         </div>
     </div>
 </footer>
