--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         </div>
         <div class="columnizeMe">
         <h2> William Berman</h2>
-            <a href="#">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/william-b-5a68a5140/" target="_blank">LinkedIn</a>
             <a href="#">Twitter</a>
         <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.</p>
         </div>
