minor update to footer

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </section>
 <footer>
     <div class="checkmeout">
-        <h2>Neat, huh?</h2>
+        <h2>William Berman, 2021</h2>
         <div class=navText>
             <a href="contact.html">Contact</a>
         </div>
