minor adjustments plus added Link Icons

--- a/about.html
+++ b/about.html
@@ -37,8 +37,9 @@
         <div class="me">
             <img src="images/IMG_1388.JPG" alt="Photo of William drumming">
         </div>
-        <div class="columnizeMe">
+        <div class="aboutMe">
         <h2> William Berman</h2>
+        <h4> Web Developer, B.A Linguistics, Drummer</h4>
         <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.</p>
         </div>
     </div>
