--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="columnizeMe">
             <h2> William Berman</h2>
-            <h4> Web Developer, B.A Linguistics</h4>
+            <h4> Web Developer</h4>
             <div class=navText>
                 <div class="projbutton">
                     <a href="projects.html">My Projects</a>
