--- a/projects.html
+++ b/projects.html
@@ -33,14 +33,11 @@
         </div>
     </header>
 <section>
-    <div class="meBody">
-
-        <div class="columnizeMe">
+        <div class="projectsBody">
         <h2>My Projects, 2021</h2><br>
 
-        <p>What I do for projects my thought process yadda yadda ribus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.</p>
+        <p>At Lambda School we collaborate on specialized projects to demonstrate our technical skills on legitimate products that exceed our clients expectations.</p>
         </div>
-    </div>
 </section>
 <section>
 <div class="gallery">
