--- a/about.html
+++ b/about.html
@@ -34,13 +34,13 @@
     </header>
 <section>
     <div class="meBody">
-        <div class="me">
+        <div class="drumming">
             <img src="images/IMG_1388.JPG" alt="Photo of William drumming">
         </div>
         <div class="aboutMe">
         <h2> William Berman</h2>
         <h4> Web Developer, B.A Linguistics, Drummer</h4>
-        <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.</p>
+        <p>Born and raised in Southeast Michigan. I'm a musician, a gamer, and a cat dad.</p>
         </div>
     </div>
 </section>
