--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="mainHeader">
-            <h1>William Berman's Project Portfolio</h1>
+            <h1>William Berman's Portfolio</h1>
             <nav>
                 <div class="navBar">
                     <div class=navText>
@@ -41,9 +41,9 @@
                     <a href="projects.html">My Projects</a>
                 </div>
             </div>
-            <p>Some thoughts on me.. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti veniam impedit, tempora atque blanditiis nesciunt accusantium praesentium, iure quis, delectus unde. Minima, dolore placeat! Asperiores.
+            <p>I am a web developer with an academic background in Linguistics and Speech Science. My unique background reinforces a new perspective into software engineering that is aptly integrated into my projects. Working together with a team of developers to package polished products for the entire world wide web to see is a dream of mine that I am so happy to share with you!
             </p>
-            <p>Last Updated: Jan. 2021</p>
+            <p>Last Updated: Feb. 2021</p>
         </div>
     </div>
 </section>
